Sorori Shinzaemon problem

--- a/Sorori_Shinzaemon_problem.ipynb
+++ b/Sorori_Shinzaemon_problem.ipynb
@@ -1,17 +1,25 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 111,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "# Import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +77,13 @@
     "plt.title(\"Rice record\")\n",
     "plt.xlabel(\"days\")\n",
     "plt.ylabel(\"Number of rice\")\n",
-    "plt.plot(list_total_grains ) # Enter the variable name of the list in \"List name\"\n",
+    "plt.plot(list_of_rice_after_each_days_1 ) # Enter the variable name of the list in \"List name\"\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,6 @@
     "        List of the total number of rice you will receive by a certain day (the length of the list will be equal to day)\n",
     "    \"\"\"\n",
     "    if return_list:\n",
-    "        n_gain = initial_rice\n",
     "        list_n_grains = []\n",
     "        list_of_rice_after_each_days = []\n",
     "        total_rice = initial_rice\n",
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -193,6 +200,54 @@
     "plt.ylabel(\"Grain receive\")\n",
     "plt.plot(list_n_grains ) # Enter the variable name of the list in \"List name\"\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_survivor_days(num_rice = 10000,min_rice = 200, num_person = 1):\n",
+    "    \"\"\"\n",
+    "    A function calculate how many day a group of n person can survive with given rice\n",
+    "    --------------\n",
+    "    num_rice: int \n",
+    "        The amount of rice was given\n",
+    "    min_rice: int\n",
+    "        Number rice a person need a day to survive\n",
+    "    num_person: int\n",
+    "        Total number of person\n",
+    "    Returns\n",
+    "    --------------\n",
+    "    num_day : double\n",
+    "        Maximun day that everyone can live\n",
+    "    \"\"\"\n",
+    "    min_rice_needed_for_n_people = min_rice* num_person # Minimun rice for the group to survive per day\n",
+    "    num_day = num_rice / min_rice_needed_for_n_people # total day they can survive\n",
+    "    return math.floor(num_day)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000000 can survive for 42255020007607648 days with 1.2676506002282294e+18 trillion rices for 3000 rice/day\n"
+     ]
+    }
+   ],
+   "source": [
+    "MIN_RICE = 3000\n",
+    "NUM_PERSON = 10**10 #10 billion person > population of the world\n",
+    "num_survive_day = calculate_survivor_days(num_rice = list_total_grains[-1],min_rice = MIN_RICE, num_person = NUM_PERSON)\n",
+    "print(\"{} can survive for {} days with {} trillion rices for {} rice/day\".format(NUM_PERSON,num_survive_day,list_total_grains[-1]/10**12,MIN_RICE))\n",
+    "    \n"
    ]
   },
   {
