Sorori Shinzaemon problem

--- a/Sorori_Shinzaemon_problem.ipynb
+++ b/Sorori_Shinzaemon_problem.ipynb
@@ -28,6 +28,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 【Problem 1] Number of grains of rice on the 100th day"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -79,6 +86,13 @@
     "plt.ylabel(\"Number of rice\")\n",
     "plt.plot(list_of_rice_after_each_days_1 ) # Enter the variable name of the list in \"List name\"\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 【Problem 2] Number of rice grains outside of the 100th day"
    ]
   },
   {
@@ -200,6 +214,13 @@
     "plt.ylabel(\"Grain receive\")\n",
     "plt.plot(list_n_grains ) # Enter the variable name of the list in \"List name\"\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 【Problem 3] How many people can live for how many days with the rice we get?"
    ]
   },
   {
