--- a/The number of times a piece of paper needs to be folded to exceed Mt. Fuji.ipynb
+++ b/The number of times a piece of paper needs to be folded to exceed Mt. Fuji.ipynb
@@ -71,7 +71,19 @@
    "outputs": [],
    "source": [
     "def foldes_to_the_star( distance, papper_thickness = 0.00008  ):\n",
-    "    amount_of_fold_needed = math.ceil(math.log(distance,2) - math.log(papper_thickness,2)) # Using the fomula in problem 1\n",
+    "    \"\"\"\n",
+    "    A function to find the length of the papper that we could fold\n",
+    "    --------------\n",
+    "    distance: int \n",
+    "        distance to the object\n",
+    "    thickness: int\n",
+    "        thickness of the papper (default = 0.00008)\n",
+    "    Returns\n",
+    "    --------------\n",
+    "    amount_of_fold_needed : int\n",
+    "        the fold need to reach the distance\n",
+    "    \"\"\"\n",
+    "    amount_of_fold_needed = math.ceil(math.log(distance,2) - math.log(papper_thickness,2)) # Using the fomula in problem 1. Number of fold also must be a integer\n",
     "    return amount_of_fold_needed"
    ]
   },
@@ -108,6 +120,18 @@
    "outputs": [],
    "source": [
     "def finding_length_of_papper (distance, thickness = 0.00008):\n",
+    "    \"\"\"\n",
+    "    A function to find the length of the papper that we could fold\n",
+    "    --------------\n",
+    "    distance: int \n",
+    "        distance to the object\n",
+    "    thickness: int\n",
+    "        thickness of the papper (default = 0.00008)\n",
+    "    Returns\n",
+    "    --------------\n",
+    "    leng : double\n",
+    "        the length of the papper\n",
+    "    \"\"\"\n",
     "    num_fold = foldes_to_the_star (distance= distance,papper_thickness=thickness) # reuse previous function to find number of fold we need\n",
     "    leng = math.pi * thickness/6 * (2**num_fold + 4 )*(2**num_fold -1)\n",
     "    return leng"
